--- a/styles/_intro.scss
+++ b/styles/_intro.scss
@@ -10,13 +10,9 @@
 }
 .intro-text {
   flex: 1 1 30rem;
-
+  margin: 5rem 0;
   h1 {
     font-weight: 700;
-    // text-decoration: underline;
-    // text-decoration-thickness: 1px;
-    // text-underline-offset: 1rem;
-    // text-decoration-color: blueviolet;
   }
   p {
     color: rgba(245, 245, 245, 0.767);
@@ -26,11 +22,10 @@
 .intro-img {
   flex: 1 1 30rem;
   pointer-events: none;
-
   text-align: center;
   img {
-    // width: 100%;
-    max-height: 70vh;
+    // max-width: 100%;
+    max-height: 50rem;
     animation: threesixty 2s timing-function infinite direction ease-in-out;
     animation: threesixty 60s infinite linear;
   }
